# location_sharing

./: .gitignore  README.md
admin/: index.html  package-lock.json  package.json  vite.config.ts
admin/src/: App.tsx  theme.ts
admin/src/api/: client.ts
admin/src/components/: Layout.tsx
admin/src/pages/: Configs.tsx  Dashboard.tsx  Login.tsx  Users.tsx
admin/src/store/: auth.ts
backend/: .env.example  Cargo.toml
backend/crates/admin/: Cargo.toml
backend/crates/admin/examples/: hash_password.rs
backend/crates/admin/src/: dto.rs  handlers.rs  lib.rs  service.rs
backend/crates/algorithm/: Cargo.toml
backend/crates/algorithm/src/: trajectory.rs
backend/crates/api/: Cargo.toml
backend/crates/api/src/: main.rs  routes.rs  state.rs
backend/crates/auth/: Cargo.toml
backend/crates/auth/src/: dto.rs  handlers.rs  lib.rs  middleware.rs  service.rs
backend/crates/common/: Cargo.toml
backend/crates/common/src/: config.rs  error.rs  lib.rs  models.rs  response.rs
backend/crates/location/: Cargo.toml
backend/crates/location/src/: dto.rs  handlers.rs  lib.rs  service.rs
backend/crates/mqtt/: Cargo.toml
backend/crates/mqtt/src/: client.rs  handler.rs  lib.rs
backend/crates/notification/: Cargo.toml
backend/crates/notification/src/: dto.rs  handlers.rs  lib.rs  service.rs
backend/crates/sms/: Cargo.toml
backend/crates/sms/src/: aliyun.rs  lib.rs  provider.rs  tencent.rs
backend/crates/trajectory/: Cargo.toml
backend/crates/trajectory/src/: dto.rs  handlers.rs  lib.rs  service.rs
backend/crates/user/: Cargo.toml
backend/crates/user/src/: dto.rs  handlers.rs  lib.rs  service.rs
backend/migrations/: 001_initial.sql  004_user_password.sql  005_amap_configs.sql  006_family_invitations.sql  007_location_battery.sql
deploy/: README.md
deploy/docker/: .env.example  Dockerfile.admin  Dockerfile.backend  Dockerfile.web  docker-compose.yml  nginx-web.conf
deploy/k8s/: ingress.example.yaml  kustomization.yaml  namespace.yaml  secrets.example.yaml
deploy/k8s/admin/: deployment.yaml  service.yaml
deploy/k8s/backend/: deployment.yaml  service.yaml
deploy/k8s/emqx/: deployment.yaml  service.yaml
deploy/k8s/postgres/: deployment.yaml  pvc.yaml  service.yaml
deploy/k8s/redis/: deployment.yaml  service.yaml
deploy/k8s/web/: deployment.yaml  service.yaml
deploy/scripts/: build-images.ps1  build-images.sh  transform.sh
harmony/: build-profile.json5  oh-package.json5
harmony/AppScope/: app.json5
harmony/AppScope/resources/base/element/: string.json
harmony/entry/: build-profile.json5  oh-package.json5
harmony/entry/src/main/: module.json5
harmony/entry/src/main/ets/api/: ApiPayloads.ets  ConfigApi.ets  HttpClient.ets
harmony/entry/src/main/ets/common/: AppTheme.ets  MediaUrl.ets
harmony/entry/src/main/ets/components/: MainBottomNav.ets
harmony/entry/src/main/ets/entryability/: EntryAbility.ets
harmony/entry/src/main/ets/pages/: FamilyPage.ets  Index.ets  LoginPage.ets  MapPage.ets  NotificationsPage.ets  SettingsPage.ets  SharingPage.ets  TrajectoryDetailPage.ets  TrajectoryPage.ets
harmony/entry/src/main/ets/services/: LocationService.ets
harmony/entry/src/main/resources/base/element/: color.json  string.json
harmony/entry/src/main/resources/base/profile/: main_pages.json
harmony/entry/src/main/resources/rawfile/: map_page.html  trajectory_map.html
harmony/hvigor/: hvigor-config.json5
mobile/: pubspec.yaml
mobile/android/: .gitignore  build.gradle  gradle.properties  settings.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/ls/location_sharing/: MainActivity.kt
mobile/android/app/src/profile/: AndroidManifest.xml
mobile/android/store/: ls.keystore
mobile/lib/: amap_config.dart  app.dart  app_logger.dart  main.dart
mobile/lib/api/: auth_api.dart  client.dart  config_api.dart  location_api.dart  user_api.dart
mobile/lib/providers/: auth_provider.dart
mobile/lib/screens/: family_screen.dart  home_shell.dart  login_screen.dart  map_screen.dart  mine_screen.dart  notifications_screen.dart  settings_screen.dart  sharing_screen.dart  trajectory_detail_screen.dart  trajectory_screen.dart
mobile/lib/services/: location_service.dart  mqtt_service.dart
mobile/lib/utils/: coord_transform.dart
mobile/test/: widget_test.dart
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx  theme.ts  vite-env.d.ts
web/src/api/: auth.ts  client.ts  config.ts  location.ts  user.ts
web/src/components/: AppLayout.tsx
web/src/mqtt/: client.ts
web/src/pages/Family/: index.tsx
web/src/pages/Login/: index.tsx
web/src/pages/Map/: index.tsx
web/src/pages/Notifications/: index.tsx
web/src/pages/Settings/: index.tsx
web/src/pages/Sharing/: index.tsx
web/src/pages/Trajectory/: index.tsx
web/src/store/: auth.ts
web/src/styles/: global.css
web/src/utils/: amap.ts  coord.ts  mediaUrl.ts
