[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/auth",
    "crates/user",
    "crates/location",
    "crates/trajectory",
    "crates/notification",
    "crates/admin",
    "crates/sms",
    "crates/mqtt",
    "crates/common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
rumqttc = "0.25"
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }
bcrypt = "0.19.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.15"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
rand = "0.10"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
base64 = "0.22"
aes-gcm = "0.10"
validator = { version = "0.20", features = ["derive"] }
common = { path = "crates/common" }
auth = { path = "crates/auth" }
user = { path = "crates/user" }
location = { path = "crates/location" }
trajectory = { path = "crates/trajectory" }
notification = { path = "crates/notification" }
admin = { path = "crates/admin" }
sms = { path = "crates/sms" }
mqtt-bridge = { path = "crates/mqtt" }
