[package]
name = "admin"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
auth = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
validator = { workspace = true }
