[package]
name = "api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "location-sharing-api"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
auth = { workspace = true }
user = { workspace = true }
location = { workspace = true }
trajectory = { workspace = true }
notification = { workspace = true }
admin = { workspace = true }
sms = { workspace = true }
mqtt-bridge = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
sha2 = { workspace = true }
ring = "0.17"
