[package]
name = "sms"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
sha1 = "0.10"
