[package]
name = "user"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
auth = { workspace = true }
notification = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
validator = { workspace = true }
